Update configuration files for multi-MCP support

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ SCHEMA_REGISTRY_DEV_URL=http://localhost:8081
 SCHEMA_REGISTRY_STAGING_URL=http://staging-registry:8081
 SCHEMA_REGISTRY_PROD_URL=http://prod-registry:8081
 
+# Kafka Broker Configuration
+KAFKA_BROKER_DEV_URL=localhost:9092
+KAFKA_BROKER_STAGING_URL_1=staging-broker1:9092
+KAFKA_BROKER_STAGING_URL_2=staging-broker2:9092
+KAFKA_BROKER_PROD_URL_1=prod-broker1:9092
+KAFKA_BROKER_PROD_URL_2=prod-broker2:9092
+KAFKA_BROKER_PROD_URL_3=prod-broker3:9092
+
 # MCP Server Configuration
 MCP_SERVER_HOST=localhost
 MCP_SERVER_PORT=8000
@@ -16,11 +24,27 @@ MCP_SERVER_PORT=8000
 API_SECRET_KEY=your-secret-key-here
 JWT_SECRET_KEY=your-jwt-secret-here
 
-# Monitoring
+# Monitoring & Alerting
 PROMETHEUS_PORT=9090
 GRAFANA_PORT=3000
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+SMTP_SERVER=smtp.gmail.com
+PAGERDUTY_KEY=your-pagerduty-integration-key
 
 # Feature Flags
 ENABLE_AUTO_DOCUMENTATION=true
 ENABLE_BREAKING_CHANGE_PREVENTION=true
 ENABLE_MONITORING=true
+ENABLE_ECOSYSTEM_ANALYSIS=true
+ENABLE_PIPELINE_VALIDATION=true
+ENABLE_AUTO_FIX_COMPATIBILITY=true
+
+# Performance Settings
+MAX_CONNECTIONS=100
+CACHE_TTL=300
+RATE_LIMIT_PER_MINUTE=1000
+
+# Backup Configuration (optional)
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+BACKUP_S3_BUCKET=kafka-ai-agent-backups
