--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,11 @@ protobuf>=4.25.0
 fastapi>=0.109.0
 uvicorn>=0.27.0
 pydantic>=2.5.0
+websockets>=12.0
+
+# CLI Enhancement
+rich>=13.7.0
+click>=8.1.0
 
 # Monitoring & Logging
 prometheus-client>=0.19.0
@@ -30,6 +35,7 @@ structlog>=24.1.0
 pytest>=7.4.0
 pytest-asyncio>=0.23.0
 pytest-mock>=3.12.0
+pytest-cov>=4.1.0
 
 # Documentation
 mkdocs>=1.5.0
